clusters/production/media/ombi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ombi
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
        - name: ombi
          image: linuxserver/ombi:4.7.8 # {"$imagepolicy": "flux-system:ombi"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3579
          volumeMounts:
            - name: ombi-config
              mountPath: /config
      volumes:
        - name: ombi-config
          persistentVolumeClaim:
            claimName: pvc-ombi-config
---
apiVersion: v1
kind: Service
metadata:
  name: ombi
  namespace: default
  labels:
    app: ombi
spec:
  selector:
    app: ombi
  ports:
  - name: ombi
    port: 3579
    targetPort: 3579
  type: ClusterIP
